--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
-numpy==1.23.4
-wheel==0.34.2
-paho_mqtt==1.5.0
+numpy==1.20.3
+paho_mqtt==1.6.1
+psutil==5.8.0
 pyfiglet==0.8.post1
-rospy==1.15.14
-termcolor==2.1.0
-pyyaml==5.3.1
-rospkg==1.4.0
-netifaces==0.10.4
-
+ray==2.4.0
+rospy==1.16.0
+sensor_msgs==1.13.1
+termcolor==2.3.0
